--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,15 +8,12 @@
     <li>텍스트
         <ul>
             <li><a href="/basic/text-basic">텍스트 출력 기본</a></li>
-            <li><a href="/basic/text-unescaped">텍스트 text, utext</a></li>
         </ul>
     </li>
     <li>표준 표현식 구문
         <ul>
             <li><a href="/basic/variable">변수 - SpringEL</a></li>
-            <li><a href="/basic/basic-objects?paramData=HelloParam">기본 객체들</
-                a>
-            </li>
+            <li><a href="/basic/basic-objects?paramData=HelloParam">기본 객체들</a></li>
             <li><a href="/basic/date">유틸리티 객체와 날짜</a></li>
             <li><a href="/basic/link">링크 URL</a></li>
             <li><a href="/basic/literal">리터럴</a></li>
